compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___wrong_callback_arg_3.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\npub record Box {\n  Box<Int>\n}\n\npub fn main() {\n  let x = fn(f) { \"Hello, \" ++ f(1) }\n  use Box(1) <- x()\n  \"Giacomo!\"\n}\n"
---
----- SOURCE CODE

pub record Box {
  Box(Int)
}

pub fn main() {
  let x = fn(f) { "Hello, " ++ f(1) }
  use Box(1) <- x()
  "Giacomo!"
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:8:7
  │
8 │   use Box(1) <- x()
  │       ^^^^^^

Expected type:

    Int

Found type:

    Box
